@@ -1,6 +1,7 @@
 2008-05-20  Florian Boor  <florian.boor@kernelconcepts.de>
 
-    * main.c (do_export_vcard...): Implement exporting of current contact list.
+    * main.c (on_export_vcard...): Implement exporting of current contact list.
+    * main-hildon.c (on_export_vcard...): likewise 
     * export.c/.h: Introduce flag to append export file.
       
 2008-05-08  Graham Cobb  <g+770@cobb.uk.net>
